fix: text shift when loading

--- a/src/root.scss
+++ b/src/root.scss
@@ -144,6 +144,10 @@ h1 {
   margin: 0;
 }
 
+h2 {
+  line-height: 1.2em;
+}
+
 .focused {
   background-color: #e8efe8 !important;
   text-decoration: underline;
